[gd_scene load_steps=13 format=3 uid="uid://chi227bo1t6mq"]

[ext_resource type="Script" path="res://Assets/UI/hud.gd" id="1_j1603"]
[ext_resource type="Texture2D" uid="uid://cib20chcah721" path="res://Assets/UI/bullet.png" id="1_yodbu"]
[ext_resource type="LabelSettings" uid="uid://cd4aa0xteuwjy" path="res://Assets/UI Settings/Bullet_label_settings.tres" id="2_fm1gc"]
[ext_resource type="Texture2D" uid="uid://c3fl1u8jahivn" path="res://Assets/UI/pistol.png" id="3_owqaj"]
[ext_resource type="Texture2D" uid="uid://beh3564ag28ye" path="res://Assets/Hostage/Citizens/Walk1Civ1.png" id="4_6ko3q"]
[ext_resource type="LabelSettings" uid="uid://dbdyw3xgaep41" path="res://Assets/UI Settings/Enemies_label_settings.tres" id="6_p25ll"]
[ext_resource type="Texture2D" uid="uid://cn0u6bra5lirc" path="res://Assets/Player/Top_Down_Survivor 2/knife/idle/survivor-idle_knife_0.png" id="7_8kjnk"]
[ext_resource type="PackedScene" uid="uid://bmr7tlslbbydx" path="res://Assets/UI/healthbar/health_bar.tscn" id="8_gw0si"]
[ext_resource type="Texture2D" uid="uid://bk5fuq73toera" path="res://Assets/Player/Knife_2.png" id="9_7odpq"]
[ext_resource type="Texture2D" uid="uid://caugwp23atoec" path="res://Assets/Art/map.png" id="10_v2bvr"]
[ext_resource type="FontFile" uid="uid://blykbpqefuxbh" path="res://TooMuchInk.ttf" id="11_gn7st"]

[sub_resource type="LabelSettings" id="LabelSettings_i2tk4"]
font = ExtResource("11_gn7st")
font_size = 46

[node name="HUD" type="Control" node_paths=PackedStringArray("bullet_label", "hostages_cleared_label", "enemies_cleared_label") groups=["hud"]]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_j1603")
bullet_label = NodePath("Pistol/BulletLabel")
hostages_cleared_label = NodePath("HostagesClearedLabel")
enemies_cleared_label = NodePath("EnemiesClearedLabel")

[node name="Pistol" type="CanvasLayer" parent="."]

[node name="PistolAmmoContainer" type="HBoxContainer" parent="Pistol"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -280.0
offset_top = -56.0
offset_right = -132.0
offset_bottom = -16.0
grow_horizontal = 0
grow_vertical = 0

[node name="BulletTexture1" type="TextureRect" parent="Pistol/PistolAmmoContainer"]
layout_mode = 2
texture = ExtResource("1_yodbu")
expand_mode = 3
stretch_mode = 4

[node name="BulletTexture2" type="TextureRect" parent="Pistol/PistolAmmoContainer"]
layout_mode = 2
texture = ExtResource("1_yodbu")
expand_mode = 3
stretch_mode = 4

[node name="BulletTexture3" type="TextureRect" parent="Pistol/PistolAmmoContainer"]
layout_mode = 2
texture = ExtResource("1_yodbu")
expand_mode = 3
stretch_mode = 4

[node name="BulletTexture4" type="TextureRect" parent="Pistol/PistolAmmoContainer"]
layout_mode = 2
texture = ExtResource("1_yodbu")
expand_mode = 3
stretch_mode = 4

[node name="BulletTexture5" type="TextureRect" parent="Pistol/PistolAmmoContainer"]
layout_mode = 2
texture = ExtResource("1_yodbu")
expand_mode = 3
stretch_mode = 4

[node name="BulletTexture6" type="TextureRect" parent="Pistol/PistolAmmoContainer"]
layout_mode = 2
texture = ExtResource("1_yodbu")
expand_mode = 3
stretch_mode = 4

[node name="BulletTexture7" type="TextureRect" parent="Pistol/PistolAmmoContainer"]
layout_mode = 2
texture = ExtResource("1_yodbu")
expand_mode = 3
stretch_mode = 4

[node name="BulletTexture8" type="TextureRect" parent="Pistol/PistolAmmoContainer"]
layout_mode = 2
texture = ExtResource("1_yodbu")
expand_mode = 3
stretch_mode = 4

[node name="BulletLabel" type="Label" parent="Pistol"]
offset_left = 1624.0
offset_top = 952.0
offset_right = 1792.0
offset_bottom = 1052.0
text = "8 / 24"
label_settings = ExtResource("2_fm1gc")

[node name="GunTexture" type="TextureRect" parent="Pistol"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -112.0
offset_top = -152.0
offset_right = -32.0
offset_bottom = -72.0
grow_horizontal = 0
grow_vertical = 0
texture = ExtResource("3_owqaj")
stretch_mode = 4
flip_h = true

[node name="Knife" type="CanvasLayer" parent="."]
visible = false

[node name="PistolAmmoContainer" type="HBoxContainer" parent="Knife"]
visible = false
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -280.0
offset_top = -56.0
offset_right = -132.0
offset_bottom = -16.0
grow_horizontal = 0
grow_vertical = 0

[node name="BulletTexture1" type="TextureRect" parent="Knife/PistolAmmoContainer"]
layout_mode = 2
texture = ExtResource("1_yodbu")
expand_mode = 3
stretch_mode = 4

[node name="BulletTexture2" type="TextureRect" parent="Knife/PistolAmmoContainer"]
layout_mode = 2
texture = ExtResource("1_yodbu")
expand_mode = 3
stretch_mode = 4

[node name="BulletTexture3" type="TextureRect" parent="Knife/PistolAmmoContainer"]
layout_mode = 2
texture = ExtResource("1_yodbu")
expand_mode = 3
stretch_mode = 4

[node name="BulletTexture4" type="TextureRect" parent="Knife/PistolAmmoContainer"]
layout_mode = 2
texture = ExtResource("1_yodbu")
expand_mode = 3
stretch_mode = 4

[node name="BulletTexture5" type="TextureRect" parent="Knife/PistolAmmoContainer"]
layout_mode = 2
texture = ExtResource("1_yodbu")
expand_mode = 3
stretch_mode = 4

[node name="BulletTexture6" type="TextureRect" parent="Knife/PistolAmmoContainer"]
layout_mode = 2
texture = ExtResource("1_yodbu")
expand_mode = 3
stretch_mode = 4

[node name="BulletTexture7" type="TextureRect" parent="Knife/PistolAmmoContainer"]
layout_mode = 2
texture = ExtResource("1_yodbu")
expand_mode = 3
stretch_mode = 4

[node name="BulletTexture8" type="TextureRect" parent="Knife/PistolAmmoContainer"]
layout_mode = 2
texture = ExtResource("1_yodbu")
expand_mode = 3
stretch_mode = 4

[node name="KnifeLabel" type="Label" parent="Knife"]
offset_left = 1624.0
offset_top = 952.0
offset_right = 1792.0
offset_bottom = 1052.0
text = "CQC"
label_settings = ExtResource("2_fm1gc")

[node name="GunTexture" type="TextureRect" parent="Knife"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -93.0
offset_top = -153.0
offset_right = -46.0
offset_bottom = -62.0
grow_horizontal = 0
grow_vertical = 0
texture = ExtResource("9_7odpq")
expand_mode = 1
stretch_mode = 4
flip_h = true

[node name="CivillianTexture" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 1840.0
offset_top = 32.0
offset_right = 1880.0
offset_bottom = 88.0
texture = ExtResource("4_6ko3q")
expand_mode = 1
stretch_mode = 4

[node name="HostagesClearedLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -432.0
offset_top = 40.0
offset_right = -88.0
offset_bottom = 104.0
grow_horizontal = 0
text = "Hostages Cleared x00"
label_settings = ExtResource("6_p25ll")

[node name="EnemyTexture" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 1832.0
offset_top = 112.0
offset_right = 1896.0
offset_bottom = 176.0
texture = ExtResource("7_8kjnk")
expand_mode = 1
stretch_mode = 4

[node name="EnemiesClearedLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 1504.0
offset_top = 128.0
offset_right = 1826.0
offset_bottom = 160.0
text = "Enemies Cleared x00"
label_settings = ExtResource("6_p25ll")

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="HealthBar" parent="." instance=ExtResource("8_gw0si")]
visible = false
layout_mode = 0
offset_left = 24.0
offset_top = 64.0
offset_right = 448.0
offset_bottom = 80.0

[node name="MapTexture" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_top = 1008.0
offset_right = 144.0
offset_bottom = 1152.0
scale = Vector2(0.5, 0.5)
texture = ExtResource("10_v2bvr")

[node name="MapLabel" type="Label" parent="MapTexture"]
visible = false
layout_mode = 0
offset_top = -44.0
offset_right = 144.0
offset_bottom = 3.0
text = "[m]"
label_settings = SubResource("LabelSettings_i2tk4")
horizontal_alignment = 1
